--- a/templates/test.html
+++ b/templates/test.html
@@ -16,27 +16,21 @@
     <div id="logs-table">
         <div class="tab-wrap">
             <input id="health-tab" type="radio" name="TAB" class="tab-switch" />
-            <label class="tab-label" for="health-tab">
-                <a href="/test/view/health">体調観察表</a>
-            </label>
+            <label class="tab-label" for="health-tab">体調観察表</label>
             <div class="tab-content">
                 コンテンツ1
             </div>
 
             <input id="behavior-tab" type="radio" name="TAB" class="tab-switch" />
-            <label class="tab-label" for="behavior-tab">
-                <a href="/test/view/behavior">行動記録表</a>
-            </label>
+            <label class="tab-label" for="behavior-tab">行動記録表</label>
             <div class="tab-content">
                 コンテンツ2
             </div>
 
             <input id="infection-tab" type="radio" name="TAB" class="tab-switch" />
-            <label class="tab-label" for="infection-tab">
-                <a href="/test/view/infection">感染記録表</a>
-            </label>
+            <label class="tab-label" for="infection-tab">感染記録表</label>
             <div class="tab-content">
-                コンテンツ2
+                コンテンツ3
             </div>
         </div>
     </div>
