--- a/templates/logins/signup.html
+++ b/templates/logins/signup.html
@@ -4,67 +4,56 @@
 	<title>Signup</title>
 	<meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/libphonenumber-js/1.1.10/libphonenumber-js.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
 </head>
 <body>
-    <fieldset>
-        <legend>
-            <h2>アカウントの作成</h2>
-        </legend>
-        <form action="/data/signup" method="post">
-            <label>学籍番号：
-                <br>
-                <input placeholder="T111000" type="text" name="User_code" required>
-            </label>
-            <br>
-            <br>
-            <label>所属：
-                <br>
-                <select name="Faculty_office" required>
-                    <option value="" selected disabled>--選択してください--</option>
-                    <optgroup label="学生">
-                        <option value="情報応用工学科">情報応用工学科</option>
-                        <option value="機械電気工学科">機械電気工学科</option>
-                        <option value="その他">その他</option>
-                    </optgroup>
-                    <optgroup label="教職員">
-                        <option value="教授">教授</option>
-                        <option value="准教授">准教授</option>
-                        <option value="講師">助教授</option>
-                        <option value="助教授">助教授</option>
-                        <option value="助手">助手</option>
-                        <option value="教務">教務</option>
-                    </optgroup>
-                    <optgroup label="その他">
-                        <option value="その他">その他</option>
-                    </optgroup>
-                </select>
-            </label>
-            <br>
-            <br>
-            <label>名前:
-                <br>
-                <input placeholder="山田太郎" type="text" name="User_name" required>
-            </label>
-            <br>
-            <br>
-            <label>電話番号(半角数字):
-                <br>
-                <b>※ハイフンは自動で挿入されます</b>
-                <br>
-                <input type="tel" name="Phone_number" minlength="11" maxlength="14" required>
-            </label>
-            <br>
-            <br>
-            <label>管理者用パスワード：
-                <br>
-                <input type="password" name="Admin_password">
-            </label>
-            <br>
-            <br>
-            <input type="submit" value="送信">
-            <input type="reset" value="消去">
-        </form>
-    </fieldset>
+<div class="container">
+    <div  class="head">
+        <h2>アカウントの作成</h2>
+    </div>
+    <form action="/data/signup" method="post">
+        <label><span>学籍番号</span>
+            <input placeholder="T111000" type="text" name="User_code" required>
+        </label>
+        <br>
+        <label><span>所属</span>
+            <select name="Faculty_office" required>
+                <option value="" selected disabled>--選択してください--</option>
+                <optgroup label="学生">
+                    <option value="情報応用工学科">情報応用工学科</option>
+                    <option value="機械電気工学科">機械電気工学科</option>
+                    <option value="その他">その他</option>
+                </optgroup>
+                <optgroup label="教職員">
+                    <option value="教授">教授</option>
+                    <option value="准教授">准教授</option>
+                    <option value="講師">助教授</option>
+                    <option value="助教授">助教授</option>
+                    <option value="助手">助手</option>
+                    <option value="教務">教務</option>
+                </optgroup>
+                <optgroup label="その他">
+                    <option value="その他">その他</option>
+                </optgroup>
+            </select>
+        </label>
+        <br>
+        <label><span>名前</span>
+            <input placeholder="山田太郎" type="text" name="User_name" required>
+        </label>
+        <br>
+        <label><span>電話番号(半角数字)  <b>※ハイフンは自動で挿入されます</b></span>
+            <input type="tel" name="Phone_number" minlength="11" maxlength="14" required>
+        </label>
+        <br>
+        <label><span>管理者用パスワード</span>
+            <input type="password" name="Admin_password">
+        </label>
+        <br>
+        <button type="submit">送信</button>
+        <button type="reset">消去</button>
+    </form>
+</div>
 <script>
     window.addEventListener("DOMContentLoaded",()=>{
         const inputTel = document.querySelector("input[name=Phone_number]");//＝電話番号の入力欄
