--- a/templates/mypages/mypage.html
+++ b/templates/mypages/mypage.html
@@ -17,8 +17,8 @@
 
     <fieldset id="information">
         <legend><h3>お知らせ！</h3></legend>
-        <p id="is_finished_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="#">入力する</a></p>
-        <p id="is_finished_behavior">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="#">入力する</a></p>
+        <p id="is_finished_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="mypage/edit/health">入力する</a></p>
+        <p id="is_finished_behavior">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="mypage/edit/behavior">入力する</a></p>
     </fieldset>
     <br>
     <div id="logs-table">
