--- a/templates/mypages/subpages/health.html
+++ b/templates/mypages/subpages/health.html
@@ -1,58 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <title>{title}</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h2>健康状態入力フォーム<br>以下の項目を入力してください</h2>
+<head>
+    <meta charset="UTF-8">
+    <title>健康状態入力フォーム</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/health.css') }}">
+</head>
+<body>
+    {% if result %}
+        {{result | safe}}
+    {% endif %}
+    <div class="container">
+        <div class="head">
+            <h2>健康状態入力フォーム</h2>
+        </div>
+        <form action="#" method="post">
+            <table>
+                <tr>
+                    <td>体温:</td>
+                    <td><input type="number" step="0.1" name="Temperature" required></td>
+                </tr>
+                <tr>
+                    <td>関節・筋肉痛:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Kinniku_pain" value="1"> はい
+                            <input type="radio" name="Kinniku_pain" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>だるさ:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Darusa" value="1"> はい
+                            <input type="radio" name="Darusa" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>頭痛:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Atama_ita" value="1"> はい
+                            <input type="radio" name="Atama_ita" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>咽頭痛:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Nodo_ita" value="1"> はい
+                            <input type="radio" name="Nodo_ita" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>息苦しさ:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Iki_gire" value="1"> はい
+                            <input type="radio" name="Iki_gire" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>咳・くしゃみ:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Seki_kusyami" value="1"> はい
+                            <input type="radio" name="Seki_kusyami" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>吐気・嘔吐:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Hakike" value="1"> はい
+                            <input type="radio" name="Hakike" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>腹痛・下痢:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Haraita" value="1"> はい
+                            <input type="radio" name="Haraita" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>味覚障害:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Mikaku" value="1"> はい
+                            <input type="radio" name="Mikaku" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>臭覚障害:</td>
+                    <td>
+                        <label>
+                            <input type="radio" name="Kyukaku" value="1"> はい
+                            <input type="radio" name="Kyukaku" value="0" checked> いいえ
+                        </label>
+                    </td>
+                </tr>
+            </table>
 
-        <form>
-            <label>体温:</label>
-            <input type="number" step="0.1" name="Temperature" required><br>
-
-            <label>関節・筋肉痛:</label>
-            <label><input type="radio" name="Kinniku_pain" value="TRUE">はい</label>
-            <label><input type="radio" name="Kinniku_pain" value="FALSE" checked>いいえ</label><br>
-
-            <label>だるさ:</label>
-            <label><input type="radio" name="Darusa" value="TRUE">はい</label>
-            <label><input type="radio" name="Darusa" value="FALSE" checked>いいえ</label><br>
-
-            <label>頭痛:</label>
-            <label><input type="radio" name="Atama_ita" value="TRUE">はい</label>
-            <label><input type="radio" name="Atama_ita" value="FALSE" checked>いいえ</label><br>
-
-            <label>咽頭痛:</label>
-            <label><input type="radio" name="Nodo_ita" value="TRUE">はい</label>
-            <label><input type="radio" name="Nodo_ita" value="FALSE" checked>いいえ</label><br>
-
-            <label>息苦しさ:</label>
-            <label><input type="radio" name="Iki_gire" value="TRUE">はい</label>
-            <label><input type="radio" name="Iki_gire" value="FALSE" checked>いいえ</label><br>
-
-            <label>咳・くしゃみ:</label>
-            <label><input type="radio" name="Seki_kusyami" value="TRUE">はい</label>
-            <label><input type="radio" name="Seki_kusyami" value="FALSE" checked>いいえ</label><br>
-
-            <label>吐気・嘔吐:</label>
-            <label><input type="radio" name="Hakike" value="TRUE">はい</label>
-            <label><input type="radio" name="Hakike" value="FALSE" checked>いいえ</label><br>
-
-            <label>腹痛・下痢:</label>
-            <label><input type="radio" name="Haraita" value="TRUE">はい</label>
-            <label><input type="radio" name="Haraita" value="FALSE" checked>いいえ</label><br>
-
-            <label>味覚障害:</label>
-            <label><input type="radio" name="Mikaku" value="TRUE">はい</label>
-            <label><input type="radio" name="Mikaku" value="FALSE" checked>いいえ</label><br>
-
-            <label>臭覚障害:</label>
-            <label><input type="radio" name="Kyukaku" value="TRUE">はい</label>
-            <label><input type="radio" name="Kyukaku" value="FALSE" checked>いいえ</label><br>
-
-            <input type="submit" value="送信">
-            <input type="reset" value="消去">
+            <button type="submit">送信</button>
+            <button type="reset">消去</button>
         </form>
-    </body>
+    </div>
+</body>
 </html>
