--- a/templates/test.html
+++ b/templates/test.html
@@ -34,6 +34,10 @@
             </div>
         </div>
     </div>
+    {% if result %}
+        {{result | safe}}
+    {% endif %}
+
 </body>
 </html>
 
