--- a/static/css/result.css
+++ b/static/css/result.css
@@ -7,7 +7,6 @@
     right: 0;
     bottom: 0;
     background-color: rgba(16, 86, 17, 0.75);
-    color: white;
     text-align: center;
     padding: 0;
     display: grid;
@@ -15,6 +14,7 @@
     align-items: center;
     /*opacity: 0.8;*/
     #popup-container{
+        animation: forwards fade-in 0.4s;
         position: absolute;
         width: 40%;
         height: 50%;
@@ -57,5 +57,13 @@
     100%{
         color: #fff;
         background-color: #054606;
+    }
+}
+@keyframes fade-in {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
