--- a/templates/mypages/admin_mypage.html
+++ b/templates/mypages/admin_mypage.html
@@ -28,6 +28,12 @@
             <a href="mypage/edit/vaccine">ワクチン接種記録表</a>
         </div>
 
+        <button class="menuButton" data-menu="menu2">編集</button>
+        <div id="menu2" class="menu">
+            <a href="mypage/edit/update">テーブル追加</a>
+            <a href="mypage/edit/delete">テーブル削除</a>
+
+        </div>
     </div>
     <div id="logs-table">
         <div class="tab-wrap">
