--- a/templates/logins/login.html
+++ b/templates/logins/login.html
@@ -10,7 +10,7 @@
         <div class="head">
             <h2>アカウントでログイン</h2>
         </div>
-        <form action="/data/login" method="post">
+        <form action="#" method="post">
             <label>学籍ID:
                 <input type="text" name="User_code" required>
             </label>
