--- a/templates/logins/signup.html
+++ b/templates/logins/signup.html
@@ -11,7 +11,7 @@
     <div  class="head">
         <h2>アカウントの作成</h2>
     </div>
-    <form action="/data/signup" method="post">
+    <form action="#" method="post">
         <label><span>学籍番号</span>
             <input placeholder="T111000" type="text" name="User_code" required>
         </label>
