--- a/templates/mypages/admin_mypage.html
+++ b/templates/mypages/admin_mypage.html
@@ -39,6 +39,7 @@
         <div class="tab-wrap">
             <input id="health-tab" type="radio" name="TAB" class="tab-switch" checked />
             <label class="tab-label" for="health-tab">体調観察表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -70,6 +71,7 @@
             </div>
             <input id="behavior-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="behavior-tab">行動記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -98,6 +100,7 @@
             </div>
             <input id="infection-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="infection-tab">感染記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -122,6 +125,7 @@
             </div>
             <input id="vaccine-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="vaccine-tab">ワクチン接種記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
