--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -5,24 +5,20 @@
 }
 
 html{
-	overflow: hidden;
-    max-width: 100%;
+    /*overflow: hidden;*/
 }
 
 body {
-    padding: 25px;
     background-color: #777777;
-    margin: 20 10;
+    margin: 10px 5%;
     font-family: 'Roboto', sans-serif;
-    max-width: 100%;
 }
-
 .container {
-    margin: 0 auto;
     border-radius: 6px;
     background-color: #eafaf8;
-    padding: 20px;
-    max-width: 100%;
+    padding: 15px;
+    width: 100%;
+    max-height: 96vh;
 }
 
 #header {
@@ -31,7 +27,7 @@ body {
     padding: 10px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     h1 {
         font-weight: bold;
@@ -43,123 +39,162 @@ body {
     margin-top: 10px;
     font-size: 1.1em;
 }
+#body{
+    display: flex;
 
-#information {
-    border: 2px solid #2ABCA7;
-    padding: 10px;
-    margin-top: 20px;
-    border-radius: 8px;
-    max-width: 700px;
-    background-color: #eafaf8;
-
-    h3 {
+    #information {
+        border: 2px solid #2ABCA7;
+        padding: 15px;
+        border-radius: 8px;
+        width: 50%;
+        background-color: #eafaf8;
         margin-bottom: 10px;
-        font-family: 'Lora', serif;
-        font-weight: bold;
-        color: #2ABCA7;
+        h3 {
+            margin-bottom: 10px;
+            font-family: 'Lora', serif;
+            font-weight: bold;
+            color: #2ABCA7;
+        }
+    }
+    #select_button{
+        position: relative;
+        width: fit-content;
+        align-content: center;
+        margin-left: auto;
+        .menuButton {
+            padding: 10px 20px;
+            font-size: 2em;
+            cursor: pointer;
+            background-color: #2ABCA7;
+            border: 1px solid #EAFAF8;
+            border-radius: 10px;
+            color: #FAFAFA;
+        }
+        .menu {
+            display: none;
+            position: absolute;
+            background-color: white;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            padding: 20px;
+            width: 250px;
+            z-index: 80;
+        }
+        .menu a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #000;
+            border-radius: 5px;
+            font-size: 1.2em;
+        }
+        .menu a:hover {
+            background-color: #EAFAF8;
+        }
     }
 }
 
-#logs-table {
-    margin-top: 20px;
-}
-
-.tab-wrap {
-    width: 100%;
-
-    .tab-switch {
-        display: none;
-    }
-
-    .tab-label {
-        display: inline-block;
-        padding: 10px 20px;
-        margin-right: 10px;
-        cursor: pointer;
-        background-color: #2ABCA7;
-        color: white;
-        border-radius: 5px 5px 0 0;
-        font-weight: bold;
-
-        &:hover {
+#logs-table{
+    .tab-wrap {
+        max-width: 100%;
+        .tab-switch {
+            display: none;
+        }
+        .tab-label {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-right: 10px;
+            cursor: pointer;
             background-color: #279c8f;
-        }
-    }
-
-    .tab-content {
-        display: none;
-        padding: 20px;
-        border: 1px solid #ddd;
-        border-top: none;
-        background-color: #fff;
-        border-radius: 0 0 5px 5px;
-        max-height: 400px;
-
-        overflow-y: auto;
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            border-spacing: 0;
-            font-family: 'Roboto', sans-serif;
-
-            th,
-            td {
-                border: 1px solid #ddd;
-                padding: 8px;
-                text-align: center;
+            color: white;
+            border-radius: 5px 5px 0 0;
+            font-weight: bold;
+            border: 1px solid #ddd;
+            &:hover {
+                background-color: #279c8f;
             }
 
-            th {
-                background-color: #2ABCA7;
-                color: white;
-                font-weight: bold;
+        }
+
+        .tab-content {
+            border: 1px solid #ddd;
+            border-top: none;
+            background-color: #fff;
+            border-radius: 0 0 5px 5px;
+            height: 40vh;
+            overflow-y: scroll;
+            /*padding: 0 15px 15px 15px;*/
+            table {
+                display: block;
+                width: 100%;
+                border-collapse: collapse;
+                border-spacing: 0;
+                font-family: 'Roboto', sans-serif;
+                th,
+                td {
+                    width: 10000px;
+                    border: 1px solid #ddd;
+                    padding: 2px;
+                    text-align: center;
+                }
+                td{
+                    text-wrap: auto;
+                }
+                th {
+                    position: sticky;
+                    top: 0;
+                    z-index: 1;
+                    background-color: #2ABCA7;
+                    border-top: #ddd;
+                    color: white;
+                    font-weight: bold;
+                    text-wrap: nowrap;
+                }
+
+                & th:before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #2ABCA7;
+                    /*background-color: #fff;*/
+                    z-index: -1;
+                }
+            }
+            /* スクロールバーの全体のスタイル */
+            &::-webkit-scrollbar {
+                width: 15px;
+                height: 12px;
+            }
+
+            /* スクロールバーのトラック（背景） */
+            &::-webkit-scrollbar-track {
+                background: #e4e4e4;
+            }
+
+            /* スクロールバーのつまみ（ドラッグする部分） */
+            &::-webkit-scrollbar-thumb {
+                background: #279c8f;
+                border-radius: 10px;
+                border: 3px solid #eeefef;
+            }
+
+            /* スクロールバーのつまみをホバーした時のスタイル */
+            ::-webkit-scrollbar-thumb:hover {
+                background: #747474;
             }
         }
-    }
-
-    .tab-switch:checked + .tab-label {
-        background-color: #fff;
-        color: #2ABCA7;
-        border-bottom: 1px solid white;
-    }
-
-    .tab-switch:checked + .tab-label + .tab-content {
-        display: block;
+        .tab-switch:checked + .tab-label {
+            background-color: #fff;
+            color: #2ABCA7;
+            border-bottom: 1px solid white;
+        }
+        .tab-switch:checked + .tab-label +.tab-blank  + .tab-content {
+            display: block;
+        }
     }
 }
 
-#slect_bottan{
-	position: relative;
-	left: 900px;
-	bottom: 100px;
-	.menuButton {
-		padding: 10px 20px;
-		font-size: 16px;
-		cursor: pointer;
-		background-color: #2ABCA7;
-		border: 1px solid #EAFAF8;
-		color: #FAFAFA;
-	}
-	.menu {
-		display: none;
-		position: absolute;
-		background-color: white;
-		border: 1px solid #ddd;
-		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-		border-radius: 8px;
-		padding: 10px;
-		margin-top: 5px;
-		width: 150px;
-	}
-	.menu a {
-		display: block;
-		padding: 10px;
-		text-decoration: none;
-		color: #000;
-		border-radius: 5px;
-	}
-	.menu a:hover {
-		background-color: #EAFAF8;
-	}
-}
