--- a/templates/mypages/mypage.html
+++ b/templates/mypages/mypage.html
@@ -7,32 +7,35 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mypage.css') }}">
 </head>
 <body>
-<div id="admin-page" class="container">
+<div id="user-page" class="container">
     <div id="header">
         <h1>マイページ</h1>
         <div id="user_info">
             こんにちは、<b>{{ User_code }}  {{ User_name }}</b>さん!
         </div>
     </div>
-    <fieldset id="information">
-        <legend><h3>お知らせ！</h3></legend>
-        <p id="is_finished_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="mypage/edit/health">入力する</a></p>
-        <p id="is_finished_behavior">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="mypage/edit/behavior">入力する</a></p>
-    </fieldset>
-    <div id="slect_bottan">
-        <button class="menuButton" data-menu="menu1">記入</button>
-        <div id="menu1" class="menu">
-            <a href="mypage/edit/health">健康記録表</a>
-            <a href="mypage/edit/behavior">行動記録表</a>
-            <a href="mypage/edit/infection">感染記録表</a>
-            <a href="mypage/edit/vaccine">ワクチン接種記録表</a>
-        </div>
+    <div id="body">
+        <fieldset id="information">
+            <legend><h3>お知らせ！</h3></legend>
+            <p id="is_finished_health">☆☆☆今日の健康記録を入力してください☆☆☆  >> <a href="mypage/edit/health">入力する</a></p>
+            <p id="is_finished_behavior">☆☆☆今日の行動記録を入力してください☆☆☆  >> <a href="mypage/edit/behavior">入力する</a></p>
+        </fieldset>
+        <div id="select_button">
+            <button class="menuButton" data-menu="menu1">記入</button>
+            <div id="menu1" class="menu">
+                <a href="mypage/edit/health">健康記録表</a>
+                <a href="mypage/edit/behavior">行動記録表</a>
+                <a href="mypage/edit/infection">感染記録表</a>
+                <a href="mypage/edit/vaccine">ワクチン接種記録表</a>
+            </div>
 
+        </div>
     </div>
     <div id="logs-table">
         <div class="tab-wrap">
             <input id="health-tab" type="radio" name="TAB" class="tab-switch" checked />
             <label class="tab-label" for="health-tab">体調観察表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -64,6 +67,7 @@
             </div>
             <input id="behavior-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="behavior-tab">行動記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -92,6 +96,7 @@
             </div>
             <input id="infection-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="infection-tab">感染記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
@@ -116,6 +121,7 @@
             </div>
             <input id="vaccine-tab" type="radio" name="TAB" class="tab-switch" />
             <label class="tab-label" for="vaccine-tab">ワクチン接種記録表</label>
+            <div class="tab-blank"></div>
             <div class="tab-content">
                 <table>
                     <thead>
