--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -5,7 +5,7 @@
 }
 
 html{
-    /*overflow: hidden;*/
+    /*overflow: scroll;*/
 }
 
 body {
@@ -63,7 +63,7 @@ body {
         margin-left: auto;
         .menuButton {
             padding: 10px 20px;
-            font-size: 2em;
+            font-size: 1.7em;
             cursor: pointer;
             background-color: #2ABCA7;
             border: 1px solid #EAFAF8;
@@ -73,6 +73,7 @@ body {
         .menu {
             display: none;
             position: absolute;
+            right: 0;
             background-color: white;
             border: 1px solid #ddd;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
