--- a/templates/test.html
+++ b/templates/test.html
@@ -21,8 +21,8 @@
                 コンテンツ1
             </div>
 
-            <input id="behavior-tab" type="radio" name="TAB" class="tab-switch" />
-            <label class="tab-label" for="behavior-tab">行動記録表</label>
+            <input id="activity-tab" type="radio" name="TAB" class="tab-switch" />
+            <label class="tab-label" for="activity-tab">行動記録表</label>
             <div class="tab-content">
                 コンテンツ2
             </div>
